sample/04_argocd/01_sample-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-pods-argo2
spec:
  strategy:
    type: Recreate
  replicas: 3
  selector:
    matchLabels:
      app: echo-pods-argo2
  template:
    metadata:
      labels:
        app: echo-pods-argo2
    spec:
      containers:
        - name: echo-pods
          image: muruu1/echo-pods:v4.0
          imagePullPolicy: Always
