sample/04_argocd/01_sample-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-myserviceb
spec:
  rules:
  - http:
      paths:
      - path: /hoge
        pathType: Prefix
        backend:
          service:
            name: echo-pods-argo2
            port:
              number: 80
  ingressClassName: nginx
